# backend

./: .gitignore  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: dev_deploy.yaml  tf_apply.yaml  tf_plan.yaml
backend/api/: app.py
backend/apps/: config.py  container.py
backend/apps/api/: config.py  dependencies.py  main.py
backend/apps/api/routers/: bookings.py  models.py  parkinglots.py  searcher.py
backend/apps/api/routers/public/: __init__.py  parkinglots.py
backend/apps/events/: booking.py  main.py  parkinglot.py
backend/contexts/booking/: application.py  domain.py  infrastructure.py
backend/contexts/parkinglot/: application.py  domain.py  infrastructure.py
backend/contexts/searcher/: application.py  domain.py  infraestructure.py
backend/contexts/shared/: domain.py  infrastructure.py
backend/tests/api/: test_app.py
backend/tests/apps/api/: test_app.py
docs/: app.excalidraw  concentrador.excalidraw  concentrador_flujo.excalidraw  concentrador_simple.excalidraw  general.excalidraw  sensor.excalidraw  sistemas_reservas.excalidraw  usuarios.excalidraw
terraform/: .terraform.lock.hcl  main.tf  state_resources.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/terraform.tfstate.d/dev/: terraform.tfstate.backup
