[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["emanuelcima <emanuel.cima@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
werkzeug = "^2.2.3"
mangum = "^0.17.0"
aws-lambda-typing = "^2.17.0"
h3 = "4.0.0b2"
python-ulid = "^1.1.0"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.114"
pytest = "^7.3.1"
uvicorn = "^0.21.1"
taskipy = "^1.10.4"
black = "^23.3.0"
httpx = "^0.24.0"
boto3-stubs = {extras = ["dynamodb", "sns"], version = "^1.26.141"}
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
oauthlib = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
serve = {cmd = "uvicorn --reload --host localhost --app-dir backend --reload apps.api.main:app", help = "run server locally"}
deploy_dev = "npx serverless deploy --stage dev"
